Updated index.html to match existing landing page.
Also renamed all GEM Network to GEM Movement.
Also added supporting logo.png image.

--- a/app/application.html
+++ b/app/application.html
@@ -1,5 +1,8 @@
 <head>
-  <title>The GEM Network</title>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>The GEM Movement</title>
 </head>
 
 <body></body>
