--- a/app/application.html
+++ b/app/application.html
@@ -1,4 +1,7 @@
 <head>
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico" >
+  <link rel="icon" type="image/gif" href="animated_favicon1.gif" >
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
