--- a/app/imports/ui/pages/landing-page.html
+++ b/app/imports/ui/pages/landing-page.html
@@ -13,16 +13,16 @@
       <div class="col-xs-12 col-sm-6 col-md-6">
         <h2>Youth</h2>
         <p> We are inviting youth of ages (12-24) who are already engaged may not have access to the toolsand resources they need to be effective. This project is designed to unify young people and support their creative brilliance by providing the tools, guidance and resources they require to take their innovative solutions for peace and make them a reality. <br>Sound like you?</p>
-        <a class="{{currentRoute 'introduction-youth'}}" href="{{pathFor 'introduction-youth'}}"><button class="button"> Get Started </button></a>
+        <a class="{{isActiveRoute 'introduction-youth'}}" href="{{pathFor 'introduction-youth'}}"><button class="button"> Get Started </button></a>
       </div> <!-- end .col-xs-12 -->
       <div class="col-xs-12 col-sm-6 col-md-6">
         <h2>Supporters</h2>
         <p>We are inviting pioneering leaders, community mentors, schools, non-profit organizations and eco-conscious companies to join GEM's philanthropic community network. Everyone who joins will be invited to support youth members by offering resources, mentorship, volunteer opportunities and any other gifts they find it within their hearts to provide.</p>
-        <a class="{{currentRoute 'introduction-supporter'}}" href="{{pathFor 'introduction-supporter'}}"><button class="button"> Get Started </button></a>
+        <a class="{{isActiveRoute 'introduction-supporter'}}" href="{{pathFor 'introduction-supporter'}}"><button class="button"> Get Started </button></a>
       </div> <!-- end .col-xs-12 -->
     </div> <!-- end of row -->
     <div class="BrowseProjects">
-      <h1><a class="{{currentRoute 'project'}}" href="{{pathFor 'project'}}"> Browse Projects </a> </h1>
+      <h1><a class="{{isActiveRoute 'project'}}" href="{{pathFor 'project'}}"> Browse Projects </a> </h1>
     </div>
   </div> <!--end container-->
 </template>
