--- a/app/client/index.html
+++ b/app/client/index.html
@@ -1,10 +1,14 @@
 <head>
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="shortcut icon" href="favicon.ico" >
-  <link rel="icon" type="image/gif" href="animated_favicon.gif">
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head
+  content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico" >
+  <link rel="icon" type="image/gif" href="animated_favicon.gif">
   <title>The GEM Movement</title>
 </head>
 
